# snake-cpp-game

./: .gitignore  CMakeLists.txt  Direction.h  Food.h  Game.cpp  Game.h  LICENSE  README.md
include/: Config.h  Game.h  GameState.h  Point.h  Snake.h
src/: Food.cpp  Game.cpp  Snake.cpp  main.cpp
